src/test/deca/context/invalid/test_error_return.deca
// Description:
//    return ne peut pas exister sans méthode
//
// Resultats:
//    Erreur contextuelle
//    Ligne 12 :  type indéfini
//
// Historique:
//      cree le 06/01/2022

{
    return 3;
}
